flask friday #4 gedaan

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,12 @@
-<br/>
-<center>
-<h1>500 Internal Server Error</h1>
-<p>Probeer opnieuw...</p>
+{% extends 'base.html' %}
 
-</center>	
+{% block content %}
+
+	<br/>
+	<center>
+	<h1>500 Internal Server Error</h1>
+	<p>Probeer opnieuw...</p>
+
+	</center>	
+
+{% endblock %}
