--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,28 @@
-<h1>Hello World!</h1>
+{% extends 'base.html' %}
 
-<p>This is my first webpage!!!</p>
+{% block content %}
 
-<p>My name is {{ first_name }}</p>
+	<h1>Hello World!</h1>
 
-<p>{{ stuff|striptags|title|trim }}</p>
+	<p>This is my first webpage!!!</p>
 
-<h3>Favorite Pizza:</h3>
+	<p>My name is {{ first_name }}</p>
 
-{% for topping in favorite_pizza %}
+	<p>{{ stuff|striptags|title|trim }}</p>
 
-	{% if topping == 41 %}
-		{{ topping + 100}}<br/>
-	{% else %}
-		{{ topping }} <br/>
-	{% endif %}
+	<h3>Favorite Pizza:</h3>
 
-{% endfor %}
+	{% for topping in favorite_pizza %}
 
-<br/><br/>
-{{favorite_pizza.3 + 10}}
+		{% if topping == 41 %}
+			{{ topping + 100}}<br/>
+		{% else %}
+			{{ topping }} <br/>
+		{% endif %}
+
+	{% endfor %}
+
+	<br/><br/>
+	{{favorite_pizza.3 + 10}}
+
+{% endblock %}
