--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,12 @@
-<br/>
-<center>
-<h1>404 Error</h1>
-<p>Pagina niet gevonden - Probeer opnieuw...</p>
+{% extends 'base.html' %}
 
-</center>	
+{% block content %}
+
+	<br/>
+	<center>
+	<h1>404 Error</h1>
+	<p>Pagina niet gevonden - Probeer opnieuw...</p>
+
+	</center>	
+
+{% endblock %}
