--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,10 +11,14 @@
           <a class="nav-link" href="{{ url_for('user', name='JOHN') }}">User Profile</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('name') }}">Naam</a>
+        </li>
+
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-secondary" type="submit">Search</button>
       </form>
     </div>
   </div>
