--- a/templates/name.html
+++ b/templates/name.html
@@ -2,6 +2,18 @@
 
 {% block content %}
 
+{% for message in get_flashed_messages() %}
+
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+
+	  {{ message }}
+
+	  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
+
+{% endfor %}
+
+
 {% if name %}
 	<h1>Hallo {{ name }}!!</h1>
 {% else %}
