flask friday #7 half js werkt niet

--- a/templates/name.html
+++ b/templates/name.html
@@ -13,9 +13,15 @@
 
 {% endfor %}
 
-
 {% if name %}
 	<h1>Hallo {{ name }}!!</h1>
+	<br/>
+	<img src="{{ url_for('static', filename='images/rodekerstbal.jpg')}}" width=1100>
+	<br/><br/>
+	<p id="demo">This is stuff...</p>
+
+	<script src="{{ url_for('static', filename='js/myfile.js')}}"></script> 
+
 {% else %}
 	<h1>Wat is je naam?</h1>
 	<br/>
