flask friday #7 js werkt nu

--- a/templates/500.html
+++ b/templates/500.html
@@ -5,8 +5,8 @@
 	<br/>
 	<center>
 	<h1>500 Internal Server Error</h1>
-	<p>Probeer opnieuw...</p>
+	<p>Something Went Wrong! Try Again...</p>
 
-	</center>	
+	</center>
 
 {% endblock %}
