--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ url_for('index') }}">Flasker-robert</a>
+    <a class="navbar-brand" href="{{ url_for('index') }}">Flasker</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,13 +8,14 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('user', name='JOHN') }}">User Profile</a>
+          <a class="nav-link" href="{{ url_for('user', name='John')}}">User Profile</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('name') }}">Naam</a>
+          <a class="nav-link" href="{{ url_for('name')}}">Name</a>
         </li>
-
+        
+        
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
