--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,13 @@
 h1 {
-		color: darkblue;
-		font-size:60px;
+	color: darkblue;
+	font-size:60px;
 }
 
-body { 
-	background: #f4f4f4; 
+body {
+	background: #f4f4f4;
+}
+
+#demo{
+	font-size: 12px;
+	color: darkblue;
 }
