--- a/templates/404.html
+++ b/templates/404.html
@@ -5,8 +5,8 @@
 	<br/>
 	<center>
 	<h1>404 Error</h1>
-	<p>Pagina niet gevonden - Probeer opnieuw...</p>
+	<p>Page Not Found - Try Again...</p>
 
-	</center>	
+	</center>
 
 {% endblock %}
