--- a/templates/name.html
+++ b/templates/name.html
@@ -3,44 +3,44 @@
 {% block content %}
 
 {% for message in get_flashed_messages() %}
-
+	
 	<div class="alert alert-warning alert-dismissible fade show" role="alert">
 	  {{ message }}
 	  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 
-
+	
 {% endfor %}
 
 
 {% if name %}
-	<h1>Hallo {{ name }}!!</h1>
+	<h1>Hello {{ name }}!!</h1>
 	<br/>
-	<img src="{{ url_for('static', filename='images/rodekerstbal.jpg')}}" width=1100>
+	<img src="{{ url_for('static', filename='images/NorthPeak.png')}}" width=800>
 	<br/><br/>
 	<p id="demo">This is stuff...</p>
 
-	<script src="{{ url_for('static', filename='js/myfile.js')}}"></script> 
+<script src="{{ url_for('static', filename='js/myfile.js')}}"></script>
+
 
 {% else %}
-	<h1>Wat is je naam?</h1>
+	<h1>What's Your Name?</h1>
 	<br/>
 	<form method="POST">
 		{{ form.hidden_tag() }}
 
-		{{ form.name.label(
-		class="form-label") }}
+		{{ form.name.label(class="form-label") }}
 
-		{{ form.name(
-		class="form-control") }}
-
+		{{ form.name(class="form-control") }}
 		<br/>
-		{{ form.submit(
-		class="btn btn-secondary") }}
+		
+		{{ form.submit(class="btn btn-secondary") }}
+
 
 	</form>
 
 
-{% endif %}	
+
+{% endif %}
 
 {% endblock %}
