--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('name')}}">Name</a>
         </li>
-        
+                <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('add_user')}}">Add User</a>
+        </li>
+
         
       </ul>
       <form class="d-flex">
